@@ -1,3 +1,15 @@
+2019-09-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc2.cc,
+	  src/SDCCsalloc.hpp,
+	  src/pdk/ralloc.c:
+	  Use Chaitin-style allocator for stack variables.
+
+2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/pdk/gen.c:
+	  Emulate nadd a, m for pdk14, pdk13.
+
 2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/pdk/gen.c,
